--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Ludo</h1>
+
+	
+	<nav>
+		<a href="#Actor" id="nav-actor">Actor</a>
+		<a href="#Quotes" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>Its a nice movie Ludo</summary>
+
+	
+	<section id="actor">
+		actor = "kartik"
+	</section>
+
+	
+	<section id="quote">
+		live proudly what in done your life.
+	</section>
+
+	
+	<aside>
+		IMDB rating: 6.5
+		relese date: 4 Dec 2024
+	</aside>
+	<footer>
+		Produce by: Ankit
+	</footer>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
