--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Ludo</h1>
+	<header>Ludo</header>
 
 	
 	<nav>
-		<a href="#Actor" id="nav-actor">Actor</a>
-		<a href="#Quotes" id="nav-quote">Quotes</a>
+		<a href="nav-actor">Actor</a>
+		<a href="nav-quote">Quotes</a>
 	</nav>
 	<summary>Its a nice movie Ludo</summary>
 
@@ -32,8 +32,8 @@
 		IMDB rating: 6.5
 		relese date: 4 Dec 2024
 	</aside>
-	<footer>
-		Produce by: Ankit
+	<footer type="text">
+		Produce by:Ankit
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
