--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 
 	
 	<nav>
-		<a href="nav-actor">Actor</a>
-		<a href="nav-quote">Quotes</a>
+		<a href="#actor" id="#nav-actor">Actor</a>
+		<a href="#quote" id="#nav-quote">Quotes</a>
 	</nav>
 	<summary>Its a nice movie Ludo</summary>
 
@@ -26,19 +26,16 @@
 	<section id="quote">
 		live proudly what in done your life.
 	</section>
-
-	
 	<aside>
 		IMDB rating: 6.5
 		relese date: 4 Dec 2024
 	</aside>
 	<footer type="text">
-		Produce by:Ankit
+		Produced by:Ankit
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
