--- a/main.html
+++ b/main.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
 	<header>Ludo</header>
 
 	
 	<nav>
-		<a href="#actor" id="#nav-actor">Actor</a>
-		<a href="#quote" id="#nav-quote">Quotes</a>
+		<span href="#actor" id="#nav-actor">actor</span>
+		<span href="#quote" id="#nav-quote">quotes</span>
 	</nav>
 	<summary>Its a nice movie Ludo</summary>
 
