--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 
 	
 	<nav>
-		<span href="#actor" id="#nav-actor">actor</span>
-		<span href="#quote" id="#nav-quote">quotes</span>
+		<a href='#actor' id='nav-actor'>actor</a>
+		<a href='#quote' id='nav-quote'>quotes</a>
 	</nav>
 	<summary>Its a nice movie Ludo</summary>
 
